--- a/includes/modules/payment/todopagoplugin/includes/composer.json
+++ b/includes/modules/payment/todopagoplugin/includes/composer.json
@@ -1,21 +1,5 @@
 {
-    "name": "todopago/php-sdk",
-    "description": "SDK para TodoPago",
     "require": {
-        "php": ">=5.3"
-    },
-    "autoload": {
-        "psr-4": {
-            "TodoPago\\": "TodoPago/lib"
-        }
-    },
-    "repositories": [
-        {
-             "type": "composer",
-             "url": "https://packagist.org"
-        },
-        { 
-            "packagist": false 
-        }
-    ]
+        "todopago/php-sdk": "^1.5"
+    }
 }
